octsympy 2.1.1.dev
==================

  * New commands:

          catalan
          eulergamma
          lambertw

  * Installing symbolic package now check for Python and minimum
    version of SymPy (thanks Carnë Draug for autoconf).

  * Documentation improvements especially to assumptions.

  * Fix a warning on Octave 4.0.0-rc1 and make tests work properly.

  * Other bug fixes: assumptions; symvar and symbolic matrix powers;
    various display issues.



octsympy 2.1.0 (2015-03-06)
===========================

  * New commands:

          columns
          degree
          formula
          ismatrix
          numden
          rows

  * Additional ways of calling symsum, symprod, and subs for better
    compatibility with other symbolic toolboxes.

  * Bug fixes in poly2sym, sym2poly, symfun (thanks @rocketsound),
    prod, horner, coeffs.

  * Documentation improvements.

  * Improvements to "argnames" and "formula" for the dependent
    variables and dependent expression of a symfun.  These are now
    implemented for basic sym objects as well.

  * Improvements to assumptions.  E.g., `x = assume(x, 'positive')` no
    longer mucks around in the workspace for other instances of x (it
    still does this with no output argument, for compatibility with
    other symbolic toolboxes).  You can use multiple assumptions with
    sym and syms, e.g., `syms n m positive even`.

  * Improve symbolic sized matrices such as `A = sym('a', [n m])`.
    These are still experimental; they correspond to MatixSymbols in
    SymPy and may need a recent SymPy development version.  For now,
    the `size(A)` returns "1x1" although internally `NaN` is used for
    symbolic-sized dimensions.  Enabling `size(A)` to return "NaNx3"
    may occur later.

  * Drop python_cmd_string, which has been deprecated since v0.1.1.



octsympy 2.0.0 (2015-02-04)
===========================

 *  Octsympy is now the "symbolic" package for Octave Forge.  There